@@ -1,6 +1,8 @@
 $Id$
 
 0.7.3beta
+	- new config option: SAURON_DNSNAME_CHECK_MODE  allows now
+	  less strict domain name checking (more AD compatible)
 	- new feature: custom DHCP global settings can now be definedo	
 	  by Riku Meskanen
 	- fix to ACL/key generation by Riku Meskanen
